tests/golden/error/type_alias_recursive_cycle.tg
// AC7: Recursive alias cycle should be rejected
type Foo = Foo
